syntax = "proto3";
package admin;
option go_package = "./admin_proto;admin_proto";
import "common.proto";
import "admin_model.proto";

// 账号列表请求参数
message ReqAdminUserList{
  ReqListBase base = 1;
  string username = 2;//账号
  string nickname = 3;//昵称
  string email = 4; //邮箱
  repeated int32 roleIds = 5;// 角色ID
}
message RespAdminUserListData{
  int64 total = 1;
  int32 pageNum = 2;
  int32 pageSize = 3;
  repeated AdminUserListItem list = 4;
}

// 账号详情
message ReqAdminUserInfo{
  int32 adminId = 1;//管理员ID
}
message RespAdminUserInfoData{
  AdminUserModel data = 1;
}


// 添加账号
message ReqAdminUserAdd{
  string username = 1;//账号
  string nickname = 2;//昵称
  string password = 3;//密码
  string confirmPassword = 4;//确认密码
  bool enabled = 5;//账号启用状态
  string email = 6;//邮箱
  string avatar = 7;//头像地址
}
message RespAdminUserAddData{
}

// 账号编辑
message ReqAdminUserEdit{
  string username = 1;//账号
  string nickname = 2;//昵称
  string password = 3;//密码
  string confirmPassword = 4;//确认密码
  bool enabled = 5;//账号启用状态
  string email = 6;//邮箱
  string avatar = 7;//头像地址
  int32 adminId = 8;//管理员ID
}
message RespAdminUserEditData{
}

// 账号状态更改
message ReqAdminUserEnabled{
  int32 adminId = 1;//管理员ID
  bool enabled = 2;//账号启用状态
}
message RespAdminUserEnabledData{
}

// 删除账号
message ReqAdminUserDelete{
  int32 adminId = 1;//管理员ID
}
message RespAdminUserDeleteData{
}

// 账号绑定角色
message ReqAdminUserBindRoles{
  int32 adminId = 1;//管理员ID
  repeated int32 roleIds = 2;//角色ID列表
}
message RespAdminUserBindRolesData{
}